WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45697
CrashTracer: 874 crashes in Safari at com.apple.WebCore: WebCore::AccessibilityTable::isTableExposableThroughAccessibility + 663
https://bugs.webkit.org/show_bug.cgi?id=45697
Summary
CrashTracer: 874 crashes in Safari at com.apple.WebCore: WebCore::Accessibili...
chris fleizach
Reported
2010-09-13 12:46:43 PDT
Thread 0 Crashed ↩: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x7fff85834757 WebCore::AccessibilityTable::isTableExposableThroughAccessibility() + 663 (/SourceCache/WebCore/WebCore-7533.16/accessibility/AccessibilityTable.cpp:166) 1 com.apple.WebCore 0x7fff858344ae WebCore::AccessibilityTable::AccessibilityTable(WebCore::RenderObject*) + 94 (/SourceCache/WebCore/WebCore-7533.16/accessibility/AccessibilityTable.cpp:57) 2 com.apple.WebCore 0x7fff85834422 WebCore::AccessibilityTable::create(WebCore::RenderObject*) + 50 (/System/Library/Frameworks/JavaScriptCore.framework/PrivateHeaders/PassRefPtr.h:107) 3 com.apple.WebCore 0x7fff85827c7a WebCore::AXObjectCache::getOrCreate(WebCore::RenderObject*) + 1066 (/System/Library/Frameworks/JavaScriptCore.framework/PrivateHeaders/RefPtr.h:148) 4 com.apple.WebCore 0x7fff8583507d WebCore::AccessibilityTableRow::isTableRow() const + 13 (/SourceCache/WebCore/WebCore-7533.16/accessibility/AccessibilityTableRow.cpp:70) 5 com.apple.WebCore 0x7fff85835c95 WebCore::AccessibilityTableRow::roleValue() const + 21 (/SourceCache/WebCore/WebCore-7533.16/accessibility/AccessibilityTableRow.cpp:62) 6 com.apple.WebCore 0x7fff85833260 WebCore::AccessibilityRenderObject::ariaLiveRegionStatus() const + 96 (/SourceCache/WebCore/WebCore-7533.16/accessibility/AccessibilityRenderObject.cpp:3269) 7 com.apple.WebCore 0x7fff858331b2 WebCore::AccessibilityObject::supportsARIALiveRegion() const + 18 (/SourceCache/WebCore/WebCore-7533.16/accessibility/AccessibilityObject.cpp:980) 8 com.apple.WebCore 0x7fff8583bb48 WebCore::AccessibilityRenderObject::contentChanged() + 72 (/SourceCache/WebCore/WebCore-7533.16/accessibility/AccessibilityRenderObject.cpp:3131) 9 com.apple.WebCore 0x7fff854b610b WebCore::StyledElement::attributeChanged(WebCore::Attribute*, bool) + 331 (/SourceCache/WebCore/WebCore-7533.16/
Attachments
patch
(4.96 KB, patch)
2010-09-13 12:55 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-09-13 12:46:50 PDT
very similar to
https://bugs.webkit.org/show_bug.cgi?id=42652
chris fleizach
Comment 2
2010-09-13 12:55:27 PDT
Created
attachment 67459
[details]
patch
Darin Adler
Comment 3
2010-09-13 13:14:13 PDT
Comment on
attachment 67459
[details]
patch Are all the callers of parentTable prepared to get 0? Will this harm correctness by returning 0 just because there’s no existing accessibility wrapper? What’s the design here?
chris fleizach
Comment 4
2010-09-13 13:51:43 PDT
(In reply to
comment #3
)
> (From update of
attachment 67459
[details]
) > Are all the callers of parentTable prepared to get 0? Will this harm correctness by returning 0 just because there’s no existing accessibility wrapper? What’s the design here?
parentTable() is used to determine if the AccessibilityTableRow should be exposed an AXRow or just a regular object. That is, it checks to see if its parent is a table, and if so, it becomes a row. If 0 is returned, those cases are covered (just checked).
chris fleizach
Comment 5
2010-09-13 13:56:49 PDT
http://trac.webkit.org/changeset/67407
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug