CrashTracer: 874 crashes in Safari at com.apple.WebCore: WebCore::AccessibilityTable::isTableExposableThroughAccessibility + 663 https://bugs.webkit.org/show_bug.cgi?id=45697

Reviewed by Darin Adler.

WebCore: 

Inside of AccessibilityTableRow, parentTable() should not use getOrCreate() on the parent table, because the render table may
be in a bad state and accessing internal variables can lead to a crash.

Test: platform/mac/accessibility/updating-attribute-in-table-row-crash.html

* accessibility/AccessibilityTableRow.cpp:
(WebCore::AccessibilityTableRow::parentTable):

LayoutTests: 

* platform/mac/accessibility/updating-attribute-in-table-row-crash-expected.txt: Added.
* platform/mac/accessibility/updating-attribute-in-table-row-crash.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@67407 bbb929c8-8fbe-4397-9dbb-9b2b20218538